--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.3.1-node
+      - image: circleci/ruby:2.3.1
         environment:
           PGHOST: 127.0.0.1
           PGUSER: postgres
